Started the index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,16 @@
-<p>fedewf</p>
+{% extends "layout.html" %}
+
+{% block main %}
+    <h2 class="container-fluid heading mt-3 mb-4">Upcoming Games</h2>
+
+    <table class="table mt-4">
+        <thead class="table container">
+            <tr>
+                <th>Date</th>
+                <th>Location</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+
+    </table>
+{% endblock %}
