--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block title %}Homepage{% endblock %}
+
 {% block main %}
     <h2 class="container-fluid heading mt-3 mb-4">Upcoming Games</h2>
 
