Database files and also lots of styling on login/register/dashboard pages

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 body
 {
     font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-    background-color: #e9e9df;
+    background-color: #E9E9DF !important;
 }
 
 .heading
@@ -23,7 +23,28 @@ nav
 
 .btn-outline-dark:hover, .btn-outline-dark:focus, .btn-outline-dark:active, .btn-outline-dark.active, .open .dropdown-toggle.btn-outline-dark
 {
-background-color: #123167 !important;
-border-color: #123167;
-color: white !important;
+    background-color: #123167 !important;
+    border-color: #123167;
+    color: white !important;
+}
+
+.btn
+{
+   border-width: 3px !important;
+   border-radius: 10px !important;
+}
+
+input[type=text], input[type=password], input[type=date], textarea
+{
+    background-color: transparent !important;
+    border-color: #123167 !important;
+    border-width: 3px !important;
+    border-radius: 10px !important;
+    width: 22% !important;
+}
+
+.message
+{
+    height: 200px !important;
+
 }
