--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,7 @@
             <input class="form-control mx-auto w-auto mt-3 mb-3" type="date" placeholder="Date"/>
             <input class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="Location"/>
             <input class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="Time"/>
-            <input class="form-control mx-auto w-auto mt-3 mb-3" type="text" style = "height: 100px" placeholder="Notes"/>
+            <textarea id="msg_input" class="form-control mx-auto mt-3 mb-3 box" rows="5" cols="5" type="text" style = "height: 100px" placeholder="Notes"></textarea>
             <button class="btn btn-outline-dark" type="submit" name="create">Create</button>
         </div>
     </form>
