--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,8 @@
     <h2 class="container-fluid heading mb-4 mt-3">Admin Login</h2>
 
     <form action="/login" method="post">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" type="text"/>
-        <input class="form-control mx-auto w-auto mt-3 mb-3" type="password"/>
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto p-2" type="text" placeholder="Username"/>
+        <input class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="password" placeholder="Password" />
         <div class="text-center">
             <input class="form-control mx-auto w-auto btn btn-outline-dark" type="submit" value="Login"/>
         </div>
