Linked the form data to app.py so we can manipulate it further in python. Also some formatting stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,10 @@
                 <th>Status</th>
             </tr>
         </thead>
-
     </table>
+
+    <form action="/" method="post">
+        <button class="btn btn-outline-dark mt-5">Register for most recent event</button>
+    </form>
+
 {% endblock %}
