--- a/static/styles.css
+++ b/static/styles.css
@@ -34,7 +34,7 @@ nav
    border-radius: 10px !important;
 }
 
-input[type=text], input[type=password], input[type=date], textarea
+input[type=text], input[type=password], input[type=date], textarea, select, input[type=integer]
 {
     background-color: transparent !important;
     border-color: #123167 !important;
@@ -46,5 +46,4 @@ input[type=text], input[type=password], input[type=date], textarea
 .message
 {
     height: 200px !important;
-
 }
