--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,13 +3,14 @@
 {% block title %}Admin Dashboard{% endblock %}
 
 {% block main %}
-    <form action="/login" method="post">
+    <form action="/dashboard" method="post">
         <h2 class="heading">Create new event</h2>
         <div class="text-center">
-            <input class="form-control mx-auto w-auto mt-3 mb-3" type="date" placeholder="Date"/>
-            <input class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="Location"/>
-            <input class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="Time"/>
-            <textarea id="msg_input" class="form-control mx-auto mt-3 mb-3 box" rows="5" cols="5" type="text" style = "height: 100px" placeholder="Notes"></textarea>
+            <input name="date" class="form-control mx-auto w-auto mt-3 mb-3" type="date" placeholder="Date"/>
+            <input name="location" class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="Location"/>
+            <input name="start" class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="Start Time"/>
+            <input name="end" class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="End Time"/>
+            <textarea name="notes" id="msg_input" class="form-control mx-auto mt-3 mb-3 box" rows="5" cols="5" type="text" style = "height: 100px" placeholder="Notes"></textarea>
             <button class="btn btn-outline-dark" type="submit" name="create">Create</button>
         </div>
     </form>
