--- a/templates/success.html
+++ b/templates/success.html
@@ -3,5 +3,5 @@
 {% block title %} Success! {% endblock %}
 {% block main %}
     <p>{{ message }}</p>
-    <p>dont worry its gonna be pretty and stuff later</p>
+    <p>Dont worry its gonna be pretty and stuff later</p>
 {% endblock %}
