--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 {% block title %}Admin Dashboard{% endblock %}
 
 {% block main %}
-    <form action="/dashboard" method="post">
+    <form action="/dashboard" method="post" autocomplete="off">
         <h2 class="heading">Create new event</h2>
         <div class="text-center">
             <input name="date" class="form-control mx-auto w-auto mt-3 mb-3" type="date" placeholder="Date"/>
