--- a/templates/pickup.html
+++ b/templates/pickup.html
@@ -5,33 +5,37 @@
 {% block main %}
     <h2 class="container-fluid heading mb-4 mt-3">Pickup Register</h2>
 
-    <form action="/pickup" method="post">
-        <input id="name" name="name" autocomplete="off" autofocus class="form-control mx-auto w-auto p-2" type="text" placeholder="Name"/>
-        <select id="pos1" class="form-select mx-auto w-auto mb-4 mt-4" name="pos1">
+    <form action="/pickup" method="post" autocomplete="off">
+        <div class="pref container">
+            <input id="name" name="name" autocomplete="off" autofocus class="form-control mx-auto w-auto p-2" type="text" placeholder="Name"/>
+            <input id="years" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="integer" name="years" placeholder="Years of Experience" />
+        </div>
+        <div class="pref container">
+            <select id="pos1" class="form-select mx-auto w-auto mb-4 mt-4" name="pos1">
                 <option selected="selected" disabled>Preference 1</option>
                 <option>Outside Hitter</option>
                 <option>Opposite/Diagonal</option>
                 <option>Middle Hitter</option>
                 <option>Libero</option>
                 <option>Setter</option>
-        </select>
-        <select id="pos2" class="form-select mx-auto w-auto mb-4" name="pos2">
+            </select>
+            <select id="pos2" class="form-select mx-auto w-auto mb-4" name="pos2">
                 <option selected="selected" disabled>Preference 2</option>
                 <option>Outside Hitter</option>
                 <option>Opposite/Diagonal</option>
                 <option>Middle Hitter</option>
                 <option>Libero</option>
                 <option>Setter</option>
-        </select>
+            </select>
             <select id="pos3" class="form-select mx-auto w-auto mb-4" name="pos3">
-                <option selected="selected" disabled>Preference 2</option>
+                <option selected="selected" disabled>Preference 3</option>
                 <option>Outside Hitter</option>
                 <option>Opposite/Diagonal</option>
                 <option>Middle Hitter</option>
                 <option>Libero</option>
                 <option>Setter</option>
-        </select>
-        <input id="years" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="integer" name="years" placeholder="Years of Experience" />
+            </select>
+        </div>
         <div class="text-center">
             <input class="form-control mx-auto w-auto btn btn-outline-dark" type="submit" value="Post Submission"/>
         </div>
