Tetsing if this works

--- a/static/styles.css
+++ b/static/styles.css
@@ -66,3 +66,8 @@ input[type=text], input[type=password], input[type=date], textarea, select, inpu
     text-align: center;
     padding: 20px;
 }
+
+.form {
+    display: flex;
+    justify-content: center;
+}
