--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         </thead>
     </table>
 
-    <form action="/" method="post">
+    <form class="form" action="/" method="post">
         <button class="btn btn-outline-dark mt-5">Register for most recent event</button>
     </form>
 
