--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,7 +3,12 @@
 {% block title %} Admin Dashboard {% endblock %}
 
 {% block main %}
-    <div class="square">
-        <a href="/pickup-volleyball/templates/dashboard.html">Test</a>
+    <div class="contain">
+        <div class="square">
+            <a href="/dashboard">Create New Event</a>
+        </div>
+        <div class="square">
+            <a href="">View adsfs (Doesn't work yet)</a>
+        </div>
     </div>
 {% endblock %}
