--- a/templates/admin.html
+++ b/templates/admin.html
@@ -5,10 +5,10 @@
 {% block main %}
     <div class="contain">
         <div class="square">
-            <a href="/dashboard">Create New Event</a>
+            <a class="event" href="/dashboard">Create New Event</a>
         </div>
         <div class="square">
-            <a href="">View adsfs (Doesn't work yet)</a>
+            <a class="event" href="">View Existing Events (Doesn't work yet)</a>
         </div>
     </div>
 {% endblock %}
