Added files to admin for html and redirect fix

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,8 +23,8 @@
               </ul>
             {% else %}
               <ul class="navbar-nav ms-auto mt-2"></ul>
-                <li> <a class="nav-item nav-link" href="/login">Admin Login</a> </li>
-                <li> <a class="nav-item nav-link" href="/register">Admin Register</a> </li>
+                <li> <a class="nav-item nav-link" href="/admin/login">Admin Login</a> </li>
+                <li> <a class="nav-item nav-link" href="/admin/register">Admin Register</a> </li>
               </ul>
             {% endif %}
           </div>
