--- a/static/styles.css
+++ b/static/styles.css
@@ -75,7 +75,7 @@ input[type=text], input[type=password], input[type=date], textarea, select, inpu
 .contain {
     display: flex;
     flex-wrap: wrap;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, 1fr);
     gap: 20px;
     justify-content: center;
     align-content: center;
@@ -85,7 +85,8 @@ input[type=text], input[type=password], input[type=date], textarea, select, inpu
 .event {
     text-decoration: none !important;
     color: #E9E9DF;
-
+    background-color: transparent;
+    border: none;
 }
 
 .event:hover {
@@ -96,14 +97,32 @@ input[type=text], input[type=password], input[type=date], textarea, select, inpu
 .square {
     border-radius: 30px;
     background-color: #123167;
-    padding: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     margin: 20px;
     text-align: center;
+    font-size: 20px;
     transition: all 0.5s;
+    width: 370px;
 }
 
 .square:hover {
     transform: scale(1.1);
     box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 
+}
+
+.not {
+    color: green;
+    background-color: blue;
+}
+
+.format {
+    font-weight: bold;
+    color: #d31532;
+}
+
+.heading {
+    font-size: 30px;
+    margin-bottom: 20px;
 }
