--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,21 @@
 {% block main %}
     <h2 class="container-fluid heading mt-3 mb-4">Upcoming Games</h2>
 
-    <table class="table mt-4">
-        <thead class="table container">
-            <tr>
-                <th>Date</th>
-                <th>Location</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-    </table>
+    <div class="contain">
+        {% for game in games %}
+            <div class="square">
+                <div class="event">
+                    <h4 class="format heading"> {{ game.date }}</h4>
+                    <p><span class="format">Time:</span> {{ game.start_time }} - {{ game.end_time }}</p>
+                    <p><span class="format">Location:</span> {{ game.location }}</p>
+                    <p><span class="format">Notes: </span> {{ game.notes }}</p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
     <form class="form" action="/" method="post">
-        <button class="btn btn-outline-dark mt-5">Register for most recent event</button>
+        <button class="button mt-5">Register for most recent event</button>
     </form>
 
 {% endblock %}
