--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,4 +35,16 @@
             {% block main %}{% endblock %}
         </main>
     </body>
+    <div class="b-example-divider"></div>
+    <div class="container">
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Upcoming Games</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Admin</a></li>
+        </ul>
+        <p class="text-center text-muted">BACBAC TECH 2022</p>
+      </footer>
+    </div>
 </html>
