Homepage html added text

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,20 @@
 {% block title %}Homepage{% endblock %}
 
 {% block main %}
-    <h2 class="container-fluid heading mt-3 mb-4">Hello World</h2>
-
-    <h6>About</h6>
-
+    <header class="bg-dark py-5">
+            <div class="container px-5">
+                <div class="row gx-5 justify-content-center">
+                    <div class="col-lg-6">
+                        <div class="text-center my-5">
+                            <h1 class="display-5 fw-bolder text-white mb-2">Are you ready to play some volleyball?</h1>
+                            <p class="lead text-white-50 mb-4">Just check out which games are available near you and we'll take care of the rest!</p>
+                            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/games/home">Upcoming Games</a>
+                                <a class="btn btn-outline-light btn-lg px-4" href="/admin/login">Organize a Game</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
 {% endblock %}
