--- a/templates/admin/register.html
+++ b/templates/admin/register.html
@@ -11,7 +11,7 @@
         <input name="confirmation" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="password" placeholder="Confirm Password" />
         <input name="key" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="password" placeholder="Admin Key" />
         <div class="text-center">
-            <input class="form-control mx-auto w-auto btn btn-outline-dark" type="submit" value="Register"/>
+            <input class="button small" type="submit" value="Register"/>
         </div>
     </form>
 {% endblock %}
