--- a/templates/games/home.html
+++ b/templates/games/home.html
@@ -4,6 +4,18 @@
 
 {% block main %}
 
-<p>test</p>
+    <h2 class="container-fluid heading mt-3 mb-4">Upcoming Games</h2>
+    <div class="contain">
+        {% for game in games %}
+            <div class="square">
+                <div class="event">
+                    <h4 class="format heading"> {{ game.date }}</h4>
+                    <p><span class="format">Time:</span> {{ game.start_time }} - {{ game.end_time }}</p>
+                    <p><span class="format">Location:</span> {{ game.location }}</p>
+                    <p><span class="format">Notes: </span> {{ game.notes }}</p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
