--- a/static/styles.css
+++ b/static/styles.css
@@ -37,14 +37,14 @@ nav
    border-color: #123167 !important;
 }
 
-input[type=text], input[type=password], input[type=date], textarea, select, input[type=integer]
+input[type=text], input[type=password], input[type=date], textarea[type=text], select, input[type=integer], input[type=text]:focus, input[type=password]:focus, input[type=date]:focus, input[type=integer]:focus, textarea[type=text]:focus
 {
-    background-color: transparent !important;
+    background-color: transparent;
     border-color: #123167 !important;
     border-width: 3px !important;
-    border-radius: 10px !important;
     width: 22% !important;
-    outline: none !important;
+    outline-color: transparent !important;
+    outline-style: none !important;
 }
 
 .message
@@ -128,14 +128,33 @@ input[type=text], input[type=password], input[type=date], textarea, select, inpu
 }
 
 .button {
+    margin-top: 10px;
     background-color: #123167;
     color: #E9E9DF;
     font-size: 25px;
     padding: 10px 20px;
     border-radius: 30px;
     transition: all 0.5s;
+    text-decoration: none;
 }
 
 .button:hover {
     transform: scale(1.05);
+    color: #E9E9DF;
+}
+
+.push {
+    margin-left: auto;
+}
+
+.forms {
+    margin-top: 15%;
+}
+
+.red {
+    background-color: #d31532;
+}
+
+.small {
+    transform: scale(1.1)
 }
