--- a/templates/admin/new-event.html
+++ b/templates/admin/new-event.html
@@ -3,7 +3,7 @@
 {% block title %}Admin Dashboard{% endblock %}
 
 {% block main %}
-    <form action="/dashboard" method="post" autocomplete="off">
+    <form action="/admin/new-event" method="post" autocomplete="off">
         <h2 class="heading">Create new event</h2>
         <div class="text-center">
             <input name="date" class="form-control mx-auto w-auto mt-3 mb-3" type="date" placeholder="Date"/>
@@ -11,7 +11,7 @@
             <input name="start" class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="Start Time"/>
             <input name="end" class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="End Time"/>
             <textarea name="notes" id="msg_input" class="form-control mx-auto mt-3 mb-3 box" rows="5" cols="5" type="text" style = "height: 100px" placeholder="Notes"></textarea>
-            <button class="btn btn-outline-dark" type="submit" name="create">Create</button>
+            <button class="button small" type="submit" name="create">Create</button>
         </div>
     </form>
 {% endblock %}
