--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,9 +23,18 @@
               </ul>
             {% else %}
               <ul class="navbar-nav ms-auto mt-2"></ul>
-                <li> <a class="nav-item nav-link" href="/admin/login">Admin Login</a> </li>
-                <li> <a class="nav-item nav-link" href="/admin/register">Admin Register</a> </li>
+                <li> <a class="nav-item nav-link" href="/admin/login">Login</a> </li>
+                <li class="ml-auto"> <a class="nav-item nav-link" href="/admin/register">Sign Up</a> </li>
+                <li class="ml-auto"> <a class="nav-item nav-link" href="/games">Upcoming Games</a> </li>
               </ul>
+              <li class="nav-item dropdown ms-auto">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Admin
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Login</a>
+                  <a class="dropdown-item" href="#">Sign Up</a>
+              </li>
             {% endif %}
           </div>
         </div>
@@ -34,10 +43,13 @@
         <main class="container mt-4">
             {% block main %}{% endblock %}
         </main>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
     <div class="b-example-divider"></div>
     <div class="container">
-      <footer class="py-3 my-4">
+      <footer class="py-3 my-4 foot">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Upcoming Games</a></li>
