--- a/templates/admin/register.html
+++ b/templates/admin/register.html
@@ -3,15 +3,17 @@
 {% block title %}Admin Register{% endblock %}
 
 {% block main %}
-    <h2 class="container-fluid heading mb-4 mt-3">Admin Register</h2>
+    <div class="forms">
+        <h2 class="container-fluid heading mb-4 mt-3">Admin Register</h2>
 
-    <form action="/admin/register" method="post" autocomplete="off">
-        <input name="username" autocomplete="off" autofocus class="form-control mx-auto w-auto p-2" type="text" placeholder="Desired Username"/>
-        <input name="password" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="password" placeholder="Desired Password" />
-        <input name="confirmation" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="password" placeholder="Confirm Password" />
-        <input name="key" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="password" placeholder="Admin Key" />
-        <div class="text-center">
-            <input class="button small" type="submit" value="Register"/>
-        </div>
-    </form>
+        <form action="/admin/register" method="post" autocomplete="off">
+            <input name="username" autocomplete="off" autofocus class="form-control mx-auto w-auto p-2" type="text" placeholder="Desired Username"/>
+            <input name="password" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="password" placeholder="Desired Password" />
+            <input name="confirmation" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="password" placeholder="Confirm Password" />
+            <input name="key" class="form-control mx-auto w-auto mt-3 mb-4 p-2" type="password" placeholder="Admin Key" />
+            <div class="text-center">
+                <input class="button small" type="submit" value="Register"/>
+            </div>
+        </form>
+    </div>
 {% endblock %}
