--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,19 +22,17 @@
                 <li> <a class="nav-item nav-link mb-3 active align-center" href="/">Home</a> </li>
               </ul>
             {% else %}
-              <ul class="navbar-nav ms-auto mt-2"></ul>
-                <li> <a class="nav-item nav-link" href="/admin/login">Login</a> </li>
-                <li class="ml-auto"> <a class="nav-item nav-link" href="/admin/register">Sign Up</a> </li>
+              <ul class="navbar-nav ms-auto mt-2 ml-auto"></ul>
                 <li class="ml-auto"> <a class="nav-item nav-link" href="/games">Upcoming Games</a> </li>
-              </ul>
-              <li class="nav-item dropdown ms-auto">
+              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Admin
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Login</a>
-                  <a class="dropdown-item" href="#">Sign Up</a>
+                  <a class="dropdown-item" href="/admin/login">Login</a>
+                  <a class="dropdown-item" href="/admin/register">Sign Up</a>
               </li>
+              </ul>
             {% endif %}
           </div>
         </div>
@@ -48,7 +46,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
     <div class="b-example-divider"></div>
-    <div class="container">
+    <div class="container foot">
       <footer class="py-3 my-4 foot">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
