(finally) Completed user flow, also made things prettier imo

--- a/templates/admin/success.html
+++ b/templates/admin/success.html
@@ -10,8 +10,8 @@
             <iframe src="https://gifer.com/embed/JGB" width=1080 height=440.000 frameBorder="0" allowFullScreen></iframe>
         </div>
         <div class="success-message animate__animated animate__fadeInLeft">
-            <h2>Your registration has been submitted.</h2>
-            <p>We will take your position preferences into consideration when organising the teams</p>
+            <h2>Your event has been added.</h2>
+            <p>Players can now view and register for events on the 'Upcoming Games' page.</p>
             <button class="button animate__animated animate__bounceIn animate__delay-1s"><a class="event" href="/">Back to Home</a></button>
         </div>
 
