--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
                             <h1 class="display-5 fw-bolder text-white mb-2">Are you ready to play some volleyball?</h1>
                             <p class="lead text-white-50 mb-4">Just check out which games are available near you and we'll take care of the rest!</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                                <a class="button" href="/games">Upcoming Games</a>
-                                <a class="button red" href="/admin/login">Organize a Game</a>
+                                <a class="button animate__animated animate__zoomIn" href="/games">Upcoming Games</a>
+                                <a class="button red animate__animated animate__zoomIn" href="/admin/login">Organize a Game</a>
                             </div>
                         </div>
                     </div>
