--- a/static/styles.css
+++ b/static/styles.css
@@ -37,7 +37,7 @@ nav
    border-color: #123167 !important;
 }
 
-input[type=text], input[type=password], input[type=date], textarea[type=text], select, input[type=integer], input[type=text]:focus, input[type=password]:focus, input[type=date]:focus, input[type=integer]:focus, textarea[type=text]:focus
+input[type=text], input[type=number], input[type=password], input[type=date], textarea[type=text], select, input[type=integer], input[type=text]:focus, input[type=password]:focus, input[type=date]:focus, input[type=integer]:focus, textarea[type=text]:focus
 {
     background-color: transparent !important;
     border-color: #123167 !important;
@@ -132,7 +132,7 @@ input[type=text], input[type=password], input[type=date], textarea[type=text], s
     background-color: #123167;
     color: #E9E9DF;
     font-size: 25px;
-    padding: 10px 20px;
+    padding: 10px 20px !important;
     border-radius: 30px;
     transition: all 0.5s;
     text-decoration: none;
@@ -166,4 +166,40 @@ input[type=text], input[type=password], input[type=date], textarea[type=text], s
 h4 {
     color: #d31532;
     text-align: center;
+}
+
+.invisible {
+    visibility: hidden;
+}
+
+.success-grid {
+    height: 90vh;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.success {
+    font-weight: bold;
+    grid-column: span 3;
+    display: flex;
+    align-items: flex-end;
+}
+
+.success-picture {
+    grid-column: span 2;
+    grid-row: span 3;
+    display: flex;
+    align-items: center;
+}
+
+.success-message {
+    margin-top: 3%;
+    grid-column: span 3;
+    line-height:2.5;
+}
+
+.login-logout-form {
+    height: 100%;
+    padding: 50px;
 }
