--- a/templates/admin/new-event.html
+++ b/templates/admin/new-event.html
@@ -10,6 +10,7 @@
             <input name="location" class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="Location"/>
             <input name="start" class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="Start Time"/>
             <input name="end" class="form-control mx-auto w-auto mt-3 mb-3" type="text" placeholder="End Time"/>
+            <input name="number_of_teams" class="form-control mx-auto w-auto mt-3 mb-3" type="number" placeholder="Number of Teams"/>
             <textarea name="notes" id="msg_input" class="form-control mx-auto mt-3 mb-3 box" rows="5" cols="5" type="text" style = "height: 100px" placeholder="Notes"></textarea>
             <button class="button small" type="submit" name="create">Create</button>
         </div>
