--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <title>{% block title %}{% endblock %}</title>
         <link href="/static/icon.png" rel="icon">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="/">
