--- a/templates/games/home.html
+++ b/templates/games/home.html
@@ -3,24 +3,32 @@
 {% block title %} Home {% endblock %}
 
 {% block main %}
-
-    <h2 class="container-fluid heading mt-3 mb-4">Upcoming Games</h2>
-    <h4>Click on any event you want to join!</h4>
-    <div class="contain">
+    <div>
+        <h2 class="container-fluid heading">Upcoming Games</h2>
         {% if games %}
-            {% for game in games %}
-                <form action="rsvp" method="get" class="square">
-                    <button type="submit" class="event">
-                        <h4 class="format heading"> {{ game.date }} </h4>
-                        <p><span class="format">Time:</span> {{ game.start_time }} - {{ game.end_time }}</p>
-                        <p><span class="format">Location:</span> {{ game.location }}</p>
-                        <p><span class="format">Notes: </span> {{ game.notes }}</p>
-                    </button><br>
-                    <input id="game_id" class="invisible" type="text" name='game_id' value='{{ game._id }}'/>
-                </form>
-            {% endfor %}
+        <table class="table table-hover">
+            <thead>
+                <th scope="col">Title</th>
+                <th scope="col">Notes</th>
+                <th scope="col">Location</th>
+                <th scope="col">Date</th>
+                <th scope="col">Time</th>
+            </thead>
+            <tbody>
+                {% for game in games %}
+                    <tr>
+                        <td> Title Goes Here </td>
+                        <td> {{ game.notes }} </td>
+                        <td> {{ game.location }} </td>
+                        <td> {{ game.date }} </td>
+                        <td> {{ game.start_time }} - {{ game.end_time }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
         {% else %}
-            <p>Oh no! Looks like there are no upcoming events :(</p>
+        <p> Oh no! Looks like there are no upcoming events :( </p>
         {% endif %}
     </div>
 
