--- a/static/styles.css
+++ b/static/styles.css
@@ -37,7 +37,7 @@ nav
    border-color: #123167 !important;
 }
 
-input[type=text], input[type=number], input[type=password], input[type=date], textarea[type=text], select, input[type=integer], input[type=text]:focus, input[type=password]:focus, input[type=date]:focus, input[type=integer]:focus, textarea[type=text]:focus
+input[type=text], input[type=number], input[type=password], input[type=date], textarea[type=text], select, input[type=integer], input[type=text]:focus, input[type=password]:focus, input[type=date]:focus, input[type=integer]:focus, textarea[type=text]:focus, textarea
 {
     background-color: transparent !important;
     border-color: #123167 !important;
