--- a/templates/admin/home.html
+++ b/templates/admin/home.html
@@ -4,7 +4,7 @@
 
 {% block main %}
     <div class="contain">
-            <a class="square" href="/admin/new-event"><button class="event">Create New Event </button></a>
-            <a class="square" href="/admin/view-events"><button class="event">View Existing Events</button></a>
+            <a href="/admin/new-event"><button>Create New Event </button></a>
+            <a href="/admin/view-events"><button>View Existing Events</button></a>
     </div>
 {% endblock %}
