--- a/templates/admin/success.html
+++ b/templates/admin/success.html
@@ -7,7 +7,7 @@
             <h1 class="success animate__animated animate__fadeInLeft">Success!</h1>
         </div>
         <div class="success-picture">
-            <iframe src="https://gifer.com/embed/JGB" width=1080 height=440.000 frameBorder="0" allowFullScreen></iframe>
+            <img src="https://gifer.com/embed/JGB" width=1080 height=440.000>
         </div>
         <div class="success-message animate__animated animate__fadeInLeft">
             <h2>Your event has been added.</h2>
