--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
         <link href="/static/icon.png" rel="icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
       <a class="navbar-brand" href="/">
         <img src="/static/icon.png" width="50" height="50" class="d-inline-block align-center">
         Pickup Volleyball
